# agents-mcp-poc

./: docker-compose.yml
.github/: instructions.md
agents/main_app/: .env.example  Dockerfile  package-lock.json  package.json
agents/main_app/app/: page.tsx
agents/onenote_search_agent/: .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.txt
agents/onenote_search_agent/core/: __init__.py  conversation_state.py  executor.py  onenote_agent.py
agents/outlook_schedule_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
agents/outlook_schedule_agent/src/: executor.ts  index.ts
agents/outlook_schedule_agent/src/services/: outlook.service.ts
agents/outlook_schedule_agent/src/utils/: logger.ts
mcp/onenote_mcp/: .env.example  Dockerfile  README.md  pyproject.toml
mcp/onenote_mcp/src/: auth.py  config.py  graph_client.py  server.py  trace_context.py
src/: docker-compose.yml
src/agents/main_app/: README.md
src/agents/main_app/app/: layout.tsx
src/agents/main_app/app/api/agents/status/: route.ts
src/agents/main_app/app/api/chat/: route.ts
src/agents/main_app/app/components/: AgentInfoModal.tsx
src/agents/main_app/lib/: agentStore.ts
