[project]
name = "onenote-mcp"
version = "0.1.0"
description = "OneNote MCP Server with OBO flow and W3C trace-context support"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "msal>=1.31.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
